# mdc-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
scripts/: add-sp-secret.sh  setup-sp.sh
specs/001-mdc-agent-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mdc-agent-api/checklists/: requirements.md
specs/001-mdc-agent-api/contracts/: assignments.yaml  exemptions.yaml  recommendations.yaml
src/: __init__.py  main.py
src/api/v1/: recommendations.py
src/middleware/: auth.py  error_handler.py  logging.py
src/models/: error.py  recommendation.py
src/services/: azure_defender.py
src/utils/: transformers.py  validators.py
tests/: __init__.py  conftest.py  test_placeholder.py
tests/contract/: test_recommendations_contract.py
tests/integration/: test_recommendation_workflow.py
tests/unit/: test_azure_defender_service.py  test_transformers.py
tests/utils/: azure_mocks.py
