[project]
name = "mdc-agent-api"
version = "0.1.0"
description = "LLM-optimized API for Azure Microsoft Defender for Cloud"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "MDC Agent Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "azure-identity>=1.25.1",
    "azure-mgmt-security>=7.0.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pydantic>=2.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "ruff>=0.14.5",
    "tenacity>=9.1.2",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
